--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter{Prozessmodelle}\label{sec:chapter2}
 
-In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, welche notwenidg sind, um den Inhalt dieser Arbeit besser zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareprozessmodell erklärt. Hierbei werden Software-Projekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei Softwareprozessmodelle Scrum, Open Unified Process und V-Modell-XT.
+In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, welche notwendig sind, um den Inhalt dieser Arbeit besser zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareprozessmodell erklärt. Hierbei werden Software-Projekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei Softwareprozessmodelle Scrum, Open Unified Process und V-Modell-XT.
 
 \section{Software Engineering}\label{sec:chapter2: Software Engineering}
 Heutzutage werden immer mehr Systeme von Software kontrolliert. Dies macht Software Engineering zu einer der bedeutendsten Technologien \cite{Puntambekar2007}.
@@ -38,9 +38,10 @@ Abbildung  \ref{fig:Wuerfel} zeigt die von \cite{ross1975software} definierten Z
  \subsubsection{Prozess des Software Engineering}
 
 Wie Abbildung  \ref{fig:Wuerfel} entnommen werden kann, besteht der Prozess des Software Engineering aus 5 Schritten: Im ersten Schritt \textit{Zielsetzung} werden die Anforderungen an ein System festgelegt. Anschließend erfolgt im Schritt \textit{Konzept} die Ableitung der Software-Architektur, um die zuvor erhobenen Anforderungen zu erfüllen. Des Weiteren werden die Komponenten des Software-Systems festgelegt. Im dritten Schritt \textit {Mechanismus} erfolgt sodann die Implementierung des Software-Systems. Im darauffolgenden Schritt \textit{Notation} wird die Kommandosprache definiert, die ein Benutzer verwendet, um die Funktionalitäten des Software-Systems aufzurufen. Im letzten Schritt \textit{Gebrauch} muss noch die Bedienung des Systems, z.B. in Form eines Benutzerhandbuches, beschrieben werden \cite{ross1975software}.
+
   \subsubsection{Ziele des Software Engineering}
 
-\textit{Modifizierbarkeit} ist das wohl schwierigste Ziel des Software Engineering. Hierbei geht es darum, dass es manchmal notwendig ist, Teile des zu entwickelnden Systems zu ändern, während andere Teile unverändert bleiben, aber dennoch das gewünschte neue Ergebnis erreicht wird. Auf die \textit{Effizienz} der jeweiligen Aktivitäten sollte immer geachtet werden, da dieses Ziel des Software Engineering häufig vernachlässigt wird. Bei dem Ziel \textit{Zuverlässigkeit} geht es darum, einerseits Fehler bei der Konzeption, im Design und der Implementierung zu vermeiden, andererseits muss auch Fehlverhalten bei der Ausführung und der Leistung verhindert werden.
+\textit{Modifizierbarkeit} ist das wohl schwierigste Ziel des Software Engineering. Hierbei geht es darum, dass es manchmal notwendig ist, Teile des zu entwickelnden Systems zu ändern, während andere Teile unverändert bleiben, aber dennoch das gewünschte neue Ergebnis erreicht wird. Auf die \textit{Effizienz} der jeweiligen Aktivitäten sollte immer geachtet werden, da dieses Ziel des Software Engineering häufig vernachlässigt wird. Bei dem Ziel \textit{Zuverlässigkeit} geht es darum, einerseits Fehler bei der Konzeption, im Design und der Implementierung zu vermeiden, andererseits muss auch Fehlverhalten bei der Ausführung und der Leistung verhindert werden \cite{ross1975software}.
  
 \section{Softwareprozessmodelle}\label{sec:chapter.2: Softwareprozessmodelle}
 
